--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,21 +1,2 @@
-spring.application.name=UnderTheStars
-
-# MySQL ?????? ?? ??
-spring.datasource.url=jdbc:mysql://localhost:3306/your_database_name
-spring.datasource.username=your_username
-spring.datasource.password=your_password
-
-# JDBC ???? ??? ??
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# Hibernate JPA ?? (?? ??)
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
-# Connection Pool ?? (?? ??)
-spring.datasource.hikari.maximum-pool-size=10
-spring.datasource.hikari.minimum-idle=5
-spring.datasource.hikari.idle-timeout=30000
-spring.datasource.hikari.max-lifetime=1800000
-spring.datasource.hikari.connection-timeout=20000
+# local, docker
+spring.profiles.active=docker
