--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,22 +30,9 @@ jobs:
 
       - name: Start MySQL
         run: |
-          docker run --name mysql -e MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }} -e MYSQL_DATABASE=${{ secrets.DB_NAME }} -p 3306:3306 -d mysql:8.0
+          docker run --name mysql -e MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }} -e MYSQL_DATABASE=${{ secrets.DB_NAME }} -e MYSQL_USER=${{ secrets.DB_USERNAME }} -e MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }} -p 3306:3306 -d mysql:8.0
           # Wait for MySQL to be ready
-          for i in {1..30}; do
-            if docker exec mysql mysqladmin ping -h localhost -u root -p${{ secrets.DB_PASSWORD }} --silent; then
-              echo "MySQL is up and running"
-              break
-            fi
-            echo "Waiting for MySQL to start..."
-            sleep 2
-          done
-
-      - name: Create test user
-        run: |
-          docker exec mysql mysql -u root -p${{ secrets.DB_PASSWORD }} -e "CREATE USER IF NOT EXISTS '${{ secrets.DB_USERNAME }}'@'%' IDENTIFIED BY '${{ secrets.DB_PASSWORD }}';"
-          docker exec mysql mysql -u root -p${{ secrets.DB_PASSWORD }} -e "GRANT ALL PRIVILEGES ON *.* TO '${{ secrets.DB_USERNAME }}'@'%';"
-          docker exec mysql mysql -u root -p${{ secrets.DB_PASSWORD }} -e "FLUSH PRIVILEGES;"
+          timeout 30s bash -c 'until docker exec mysql mysqladmin ping -h localhost -u${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} --silent; do sleep 1; done'
 
       - name: Run tests
         run: ./gradlew test --info
