[Update] get user API 구현

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -24,5 +24,7 @@ jwt.access-token-validity=1800
 # 2 week
 jwt.refresh-token-validity=1209600
 
-
+# jackson
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 
