--- a/src/main/resources/application-docker.properties.template
+++ b/src/main/resources/application-docker.properties.template
@@ -27,3 +27,7 @@ spring.datasource.hikari.connection-timeout=20000
 jwt.access-token-validity=1800
 # 2 week
 jwt.refresh-token-validity=1209600
+
+# jackson
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
