--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,21 +1,20 @@
 spring.application.name=UnderTheStars
-
 # MySQL ?????? ?? ??
 spring.datasource.url=jdbc:mysql://localhost:3306/ustar
 spring.datasource.username=user
 spring.datasource.password=
-
 # JDBC ???? ??? ??
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
 # Hibernate JPA ?? (?? ??)
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-
 # Connection Pool ?? (?? ??)
 spring.datasource.hikari.maximum-pool-size=10
 spring.datasource.hikari.minimum-idle=5
 spring.datasource.hikari.idle-timeout=30000
 spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=20000
+# jackson
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
