--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,2 @@
 # local, docker
-spring.profiles.active=docker
-logging.level.org.springframework.web=DEBUG
-logging.level.com.wooil.ustar=DEBUG
+spring.profiles.active=dev
