--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,8 +93,10 @@ jobs:
           fi
 
       - name: 🛠️ Build Docker image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} .
-
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} .
+          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} ${{ secrets.DOCKERHUB_USERNAME }}/ustar:latest
+          
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
