[Update] test code

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,9 +1,9 @@
-### main-dev
 spring.application.name=UnderTheStars
+# MySQL ?????? ?? ??
 # MySQL ----------------------------------------------------
-spring.datasource.url=${{secrets.DB_URL}}
-spring.datasource.username=${{secrets.DB_USERNAME}}
-spring.datasource.password=${{secrets.DB_PASSWORD}}
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #-----------------------------------------------------------
 # hibernate ------------------------------------------------
@@ -20,7 +20,7 @@ spring.datasource.hikari.max-lifetime=1800000
 spring.datasource.hikari.connection-timeout=20000
 #-----------------------------------------------------------
 # jwt ------------------------------------------------------
-jwt.secret=${{secrets.TEST_SECRET}}
+jwt.secret=${SPRING_JWT_SECRET}
 jwt.access-token-validity=1800000
 jwt.refresh-token-validity=1209600000
 #-----------------------------------------------------------
