--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -72,40 +72,46 @@ jobs:
           echo "Username: ${{ secrets.DB_USERNAME }}"
           echo "Password: [PROTECTED]"
 
-      - name: 🔥 Run tests
+      - name: Copy main resources to test resources
         run: |
-          ./gradlew test --info
-        env:
-          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/${{ secrets.DB_NAME }}?useSSL=false&serverTimezone=UTC
-          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
-          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
-
-      - name: 🛠️ Build with Gradle
-        run: ./gradlew build
-
-      - name: ⚙️ Set Docker image tag
-        id: set_tag
-        run: |
-          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
-            echo "IMAGE_TAG=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
-          elif [[ $GITHUB_REF == refs/tags/* ]]; then
-            echo "IMAGE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
-          else
-            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_OUTPUT
-          fi
-
-      - name: 🛠️ Build Docker image
-        run: |
-          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} .
-          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} ${{ secrets.DOCKERHUB_USERNAME }}/ustar:latest
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: 🚀 Push Docker image
-        run: |
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }}
-          docker push ${{ secrets.DOCKERHUB_USERNAME }}/ustar:latest
+          mkdir -p src/test/resources
+          cp src/main/resources/application*.properties src/test/resources/
+          cat src/test/resources/application-dev.properties
+#
+#      - name: 🔥 Run tests
+#        run: |
+#          ./gradlew test --info
+#        env:
+#          SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/${{ secrets.DB_NAME }}?useSSL=false&serverTimezone=UTC
+#          SPRING_DATASOURCE_USERNAME: ${{ secrets.DB_USERNAME }}
+#          SPRING_DATASOURCE_PASSWORD: ${{ secrets.DB_PASSWORD }}
+#
+#      - name: 🛠️ Build with Gradle
+#        run: ./gradlew build
+#
+#      - name: ⚙️ Set Docker image tag
+#        id: set_tag
+#        run: |
+#          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+#            echo "IMAGE_TAG=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+#          elif [[ $GITHUB_REF == refs/tags/* ]]; then
+#            echo "IMAGE_TAG=${GITHUB_REF#refs/tags/}" >> $GITHUB_OUTPUT
+#          else
+#            echo "IMAGE_TAG=${{ github.sha }}" >> $GITHUB_OUTPUT
+#          fi
+#
+#      - name: 🛠️ Build Docker image
+#        run: |
+#          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} .
+#          docker tag ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }} ${{ secrets.DOCKERHUB_USERNAME }}/ustar:latest
+#
+#      - name: Login to Docker Hub
+#        uses: docker/login-action@v2
+#        with:
+#          username: ${{ secrets.DOCKERHUB_USERNAME }}
+#          password: ${{ secrets.DOCKERHUB_TOKEN }}
+#
+#      - name: 🚀 Push Docker image
+#        run: |
+#          docker push ${{ secrets.DOCKERHUB_USERNAME }}/ustar:${{ steps.set_tag.outputs.IMAGE_TAG }}
+#          docker push ${{ secrets.DOCKERHUB_USERNAME }}/ustar:latest
