--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,43 +40,46 @@ jobs:
       - name: 📕 Grant execute permission for gradlew
         run: chmod +x gradlew
 
-      - name: ⏰ Start MySQL
-        run: |
-          docker run --name mysql -e MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }} -e MYSQL_DATABASE=${{ secrets.DB_NAME }} -e MYSQL_USER=${{ secrets.DB_USERNAME }} -e MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }} -p 3306:3306 -d mysql:8.0
-
-      - name: ✅ MySQL Health Check
-        run: |
-          echo "Waiting for MySQL to be ready..."
-          for i in {1..60}; do
-            if docker exec mysql mysqladmin ping -h localhost -u${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} --silent; then
-              echo "MySQL is ready!"
-              break
-            fi
-            echo "Attempt $i: MySQL is not ready yet. Waiting..."
-            sleep 10
-          done
-          if [ $i -eq 60 ]; then
-            echo "MySQL did not become ready in time."
-            exit 1
-          fi
-
-      - name: ✅ Verify MySQL Connection
-        run: |
-          echo "Verifying MySQL connection..."
-          docker exec mysql mysql -u${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES;"
-
-      - name: ✅ Print Database Connection Info
-        run: |
-          echo "Database connection info:"
-          echo "URL: jdbc:mysql://localhost:3306/${{ secrets.DB_NAME }}?useSSL=false&serverTimezone=UTC"
-          echo "Username: ${{ secrets.DB_USERNAME }}"
-          echo "Password: [PROTECTED]"
+#      - name: ⏰ Start MySQL
+#        run: |
+#          docker run --name mysql -e MYSQL_ROOT_PASSWORD=${{ secrets.DB_PASSWORD }} -e MYSQL_DATABASE=${{ secrets.DB_NAME }} -e MYSQL_USER=${{ secrets.DB_USERNAME }} -e MYSQL_PASSWORD=${{ secrets.DB_PASSWORD }} -p 3306:3306 -d mysql:8.0
+#
+#      - name: ✅ MySQL Health Check
+#        run: |
+#          echo "Waiting for MySQL to be ready..."
+#          for i in {1..60}; do
+#            if docker exec mysql mysqladmin ping -h localhost -u${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} --silent; then
+#              echo "MySQL is ready!"
+#              break
+#            fi
+#            echo "Attempt $i: MySQL is not ready yet. Waiting..."
+#            sleep 10
+#          done
+#          if [ $i -eq 60 ]; then
+#            echo "MySQL did not become ready in time."
+#            exit 1
+#          fi
+#
+#      - name: ✅ Verify MySQL Connection
+#        run: |
+#          echo "Verifying MySQL connection..."
+#          docker exec mysql mysql -u${{ secrets.DB_USERNAME }} -p${{ secrets.DB_PASSWORD }} -e "SHOW DATABASES;"
+#
+#      - name: ✅ Print Database Connection Info
+#        run: |
+#          echo "Database connection info:"
+#          echo "URL: jdbc:mysql://localhost:3306/${{ secrets.DB_NAME }}?useSSL=false&serverTimezone=UTC"
+#          echo "Username: ${{ secrets.DB_USERNAME }}"
+#          echo "Password: [PROTECTED]"
 
       - name: Copy main resources to test resources
         run: |
           mkdir -p src/test/resources
           cp src/main/resources/application*.properties src/test/resources/
-          cat src/test/resources/application-dev.properties
+          echo "Contents of src/test/resources directory:"
+          ls -la src/test/resources
+          echo "Contents of application-dev.properties:"
+          cat src/test/resources/application-dev.properties || echo "File not found"
 #
 #      - name: 🔥 Run tests
 #        run: |
