--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,14 +37,12 @@ jobs:
           ${{secrets.APPLICATION_PROPERTIES}}
           EOF
 
-          echo "Contents of src/main/resources/application-dev.properties:"
-          cat src/main/resources/application-dev.properties | sed 's/^/    /'
-
-          echo "File size of application-dev.properties:"
-          ls -l src/main/resources/application-dev.properties | awk '{print $5}'
-
-          echo "Number of lines in application-dev.properties:"
-          wc -l < src/main/resources/application-dev.properties
+      - name: 📝 Create and verify application-docker.properties
+        run: |
+          # For main resources
+          cat << EOF > src/main/resources/application-docker.properties
+          ${{secrets.DOCKER_PROPERTIES}}
+          EOF
 
       - name: 📕 Grant execute permission for gradlew
         run: chmod +x gradlew
