--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - 'main'
       - 'develop'
-      - 'feat/**'
+#      - 'feat/**'
     tags:
       - 'v*'
   pull_request:
